--- a/api/.env.example
+++ b/api/.env.example
@@ -5,6 +5,20 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+MQ_HOST=
+MQ_PORT=
+MQ_USER=
+MQ_PASS=
+MQ_VHOST=
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_HOST=
+PUSHER_PORT=
+PUSHER_SCHEME=
+PUSHER_APP_CLUSTER=
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
