Persistindo confs do rabbit e ajustando networks

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -21,6 +21,9 @@ services:
             - '.:/var/www/html'
         networks:
             - sail
+            - waf
 networks:
     sail:
+        driver: bridge
+    waf:
         driver: bridge
