--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,16 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=guest
       - RABBITMQ_DEFAULT_PASS=guest
+    volumes:
+      - ./conf-rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf:ro
+      - ./conf-rabbitmq/definitions.json:/etc/rabbitmq/definitions.json:ro
     ports:
       - "5672:5672"
       - "15672:15672"
+    networks:
+      - api_waf
 networks:
-  default:
-    driver: bridge
+  api_waf:
+    external: true
 
   
